--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 		<link rel="icon" href="/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.DRSIP-lv.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/DHUN02Uf.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.B1KBhRV_.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/C_gTgSRX.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/BCQ4AXhQ.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/DMqeO2by.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.CJL8ttFq.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.fN3sxsFl.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/ZAsNvhcv.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/D4k4vJAq.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/DhWqEYSG.js">
@@ -18,15 +18,15 @@
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_1726u64 = {
+					__sveltekit_1fh2a71 = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.DRSIP-lv.js"),
-						import("/_app/immutable/entry/app.CJL8ttFq.js")
+						import("/_app/immutable/entry/start.B1KBhRV_.js"),
+						import("/_app/immutable/entry/app.fN3sxsFl.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
