--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="manifest" href="/manifest.json" />
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.B1KBhRV_.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/C_gTgSRX.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.BD0NzLn1.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/lCJlUeBS.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/BCQ4AXhQ.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/DMqeO2by.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.fN3sxsFl.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.B0avhhLQ.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/ZAsNvhcv.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/D4k4vJAq.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/DhWqEYSG.js">
@@ -18,15 +19,15 @@
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_1fh2a71 = {
+					__sveltekit_1n8j701 = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.B1KBhRV_.js"),
-						import("/_app/immutable/entry/app.fN3sxsFl.js")
+						import("/_app/immutable/entry/start.BD0NzLn1.js"),
+						import("/_app/immutable/entry/app.B0avhhLQ.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
