--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="manifest" href="/manifest.json" />
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.BD0NzLn1.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/lCJlUeBS.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.G0BxHlCH.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/CYGA8lVB.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/BCQ4AXhQ.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/DMqeO2by.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.B0avhhLQ.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.B4qkyNBA.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/ZAsNvhcv.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/D4k4vJAq.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/DhWqEYSG.js">
@@ -19,24 +19,18 @@
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_1n8j701 = {
+					__sveltekit_36yhx9 = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.BD0NzLn1.js"),
-						import("/_app/immutable/entry/app.B0avhhLQ.js")
+						import("/_app/immutable/entry/start.G0BxHlCH.js"),
+						import("/_app/immutable/entry/app.B4qkyNBA.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
-
-					if ('serviceWorker' in navigator) {
-						addEventListener('load', function () {
-							navigator.serviceWorker.register('/service-worker.js');
-						});
-					}
 				}
 			</script>
 		</div>
