--- a/index.html
+++ b/index.html
@@ -6,28 +6,28 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="manifest" href="/manifest.json" />
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.G0BxHlCH.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/CYGA8lVB.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/BCQ4AXhQ.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/DMqeO2by.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.B4qkyNBA.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/ZAsNvhcv.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/D4k4vJAq.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/DhWqEYSG.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.BghnC2ub.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/CYLF1Y8Q.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/yk3OZaml.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/CEWJZstI.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.vm17m8bx.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/CNXnYEIQ.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/DT75nFQW.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/D8zfXKJK.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_36yhx9 = {
+					__sveltekit_1kuyras = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.G0BxHlCH.js"),
-						import("/_app/immutable/entry/app.B4qkyNBA.js")
+						import("/_app/immutable/entry/start.BghnC2ub.js"),
+						import("/_app/immutable/entry/app.vm17m8bx.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
