--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="manifest" href="/manifest.json" />
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.BghnC2ub.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/CYLF1Y8Q.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.DSsnTMt9.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/DHWH2vJw.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/yk3OZaml.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/CEWJZstI.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.vm17m8bx.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.DTROVyee.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/CNXnYEIQ.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/DT75nFQW.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/D8zfXKJK.js">
@@ -19,15 +19,15 @@
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_1kuyras = {
+					__sveltekit_1l9kmye = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.BghnC2ub.js"),
-						import("/_app/immutable/entry/app.vm17m8bx.js")
+						import("/_app/immutable/entry/start.DSsnTMt9.js"),
+						import("/_app/immutable/entry/app.DTROVyee.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
